fixes footer overlapping with form submit buttons

--- a/app/assets/stylesheets/osem.scss
+++ b/app/assets/stylesheets/osem.scss
@@ -67,7 +67,6 @@ body {
 
 .navbar-static-bottom {
   background-color: #2F2F2F;
-  position: absolute;
 }
 
 .container {
